Added Another Change

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Mira Web Development Agency</h1>
     <p>We specialise in building quality software for organisations and companies</p>
+    <p>We are having a 4-week bootcamp</p>
 </body>
 </html>
